--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,32 @@
 body {
 	background: #000;
 }
+
+.linear-mask {
+	mask-image: linear-gradient(
+		-75deg,
+		white calc(var(--x) + 20%),
+		transparent calc(var(--x) + 30%),
+		white calc(var(--x) + 100%)
+	);
+	-webkit-mask-image: linear-gradient(
+		-75deg,
+		white calc(var(--x) + 20%),
+		transparent calc(var(--x) + 30%),
+		white calc(var(--x) + 100%)
+	);
+}
+
+.linear-overlay {
+	background-image: linear-gradient(
+		-75deg,
+		rgba(255, 255, 255, 0.1) calc(var(--x) + 20%),
+		rgba(255, 255, 255, 0.5) calc(var(--x) + 25%),
+		rgba(255, 255, 255, 0.1) calc(var(--x) + 100%)
+	);
+	mask: linear-gradient(black, black) content-box, linear-gradient(black, black);
+	-webkit-mask: linear-gradient(black, black) content-box,
+		linear-gradient(black, black);
+	mask-composite: exclude;
+	-webkit-mask-composite: xor;
+}
